# stac-rs

./: .gitignore  .markdownlint-cli2.jsonc  .readthedocs.yaml  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  RELEASING.md  codecov.yml  convert.py  data  docker-compose.yml  latest  mkdocs.yml  pyproject.toml  release.toml  requirements-docs.in  requirements-docs.txt  rust-toolchain.toml  versions.json
api/: CHANGELOG.md  Cargo.toml  README.md
api/examples/: planetary-computer-page.geojson
api/mocks/: search-page-1.json
api/src/: client.rs  collections.rs  error.rs  fields.rs  filter.rs  item_collection.rs  items.rs  lib.rs  search.rs  sort.rs  url_builder.rs
async/: CHANGELOG.md  Cargo.toml  README.md
async/data/: extended-item.parquet  items.ndjson
async/src/: api_client.rs  error.rs  io.rs  lib.rs  object_store.rs
cli/: CHANGELOG.md  Cargo.toml  README.md  data  pyproject.toml
cli/src/: args.rs  config.rs  error.rs  format.rs  input.rs  lib.rs  main.rs  object_store.rs  options.rs  output.rs  python.rs  runner.rs  value.rs
cli/src/args/: item.rs  items.rs  migrate.rs  mod.rs  search.rs  serve.rs  translate.rs  validate.rs
cli/src/subcommand/: item.rs  mod.rs  search.rs  sort.rs  translate.rs  validate.rs
cli/tests/: help.rs  item.rs  items.rs  smoke.rs  sort.rs  validate.rs
core/: CHANGELOG.md  Cargo.toml  README.md  build.rs
core/data/: 20201211_223832_CS2.json  items.ndjson
core/data/eo/: item.json
core/examples/: bands-v1.1.0-beta.1.json
core/src/: asset.rs  catalog.rs  collection.rs  error.rs  fields.rs  format.rs  gdal.rs  geoparquet.rs  href.rs  io.rs  item.rs  item_collection.rs  json.rs  lib.rs  link.rs  migrate.rs  mime.rs  ndjson.rs  object.rs  object_store.rs  value.rs  version.rs
core/src/extensions/: authentication.rs  electro_optical.rs  mod.rs  projection.rs  raster.rs
core/src/geoarrow/: json.rs  mod.rs
core/src/geoparquet/: feature.rs  mod.rs  no_feature.rs
core/src/io/: format.rs  geoparquet.rs  json.rs  mod.rs
core/src/validate/: blocking.rs  mod.rs  validator.rs
core/tests/: examples.rs  migrate.rs
crates/api/: CHANGELOG.md  Cargo.toml  README.md
crates/api/mocks/: items-page-1.json  items-page-2.json
crates/api/src/: client.rs  collections.rs  conformance.rs  error.rs  filter.rs  item_collection.rs  items.rs  lib.rs  python.rs  search.rs
crates/cli/: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml  release.toml
crates/cli/data/: invalid-item.json
crates/cli/src/: args.rs  error.rs  input.rs  lib.rs  main.rs  output.rs  python.rs  run.rs  value.rs
crates/core/: CHANGELOG.md  Cargo.toml  README.md  examples
crates/derive/: Cargo.toml
crates/duckdb/: CHANGELOG.md  Cargo.toml  README.md
crates/extensions/: CHANGELOG.md  Cargo.toml  README.md
crates/gdal/: Cargo.toml
crates/object-store-cache/: Cargo.toml
duckdb/: CHANGELOG.md  Cargo.toml  README.md
duckdb/duckdb-test/: Cargo.toml
duckdb/src/: lib.rs
pgstac/: CHANGELOG.md  Cargo.toml  README.md  docker-compose.yml
pgstac/pgstac-test/: Cargo.toml
pgstac/src/: client.rs  lib.rs  tls.rs
pystac/: Cargo.toml  pyproject.toml  pystac_rs.pyi
pystac/src/: item.rs  lib.rs  module.rs
pystac/tests/: test_item.py
python/: .gitignore  .readthedocs.yaml  CHANGELOG.md  Cargo.toml  README.md  mkdocs.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-docs.txt  stacrs.pyi
python/data/: extended-item.parquet  invalid-item.json
python/docs/: CODE_OF_CONDUCT  api.md  index.md
python/pgstacrs/: Cargo.toml  pgstacrs.pyi  pyproject.toml
python/src/: error.rs  lib.rs  migrate.rs  read.rs  search.rs  validate.rs  write.rs
python/stacrs/: README.md
python/tests/: conftest.py  test_migrate.py  test_pystac.py  test_search.py  test_validate.py  test_version.py
server/: CHANGELOG.md  Cargo.toml  README.md
server/src/: api.rs  error.rs  lib.rs  routes.rs
stac/: CHANGELOG.md  Cargo.toml  README.md  build.rs
stac-api/: CHANGELOG.md  Cargo.toml  README.md
stac-api/src/: builder.rs  collections.rs  conformance.rs  error.rs  fields.rs  filter.rs  filter_lang.rs  item_collection.rs  items.rs  lib.rs  link.rs  link_builder.rs  root.rs  search.rs  sort.rs
stac-arrow/: Cargo.toml  README.md
stac-arrow/benches/: read.rs
stac-arrow/data/: naip.json  naip.parquet
stac-arrow/examples/: extended-item.parquet  sentinel-2-l2a-1.0.0.parquet  sentinel-2-l2a-1.1.0.parquet  sentinel-2-l2a.json  two-sentinel-2-items.json
stac-arrow/src/: error.rs  json.rs  lib.rs  parquet.rs  read.rs  table.rs  write.rs
stac-async/: CHANGELOG.md  Cargo.toml  README.md
stac-async/mocks/: not-a-collection.json  page-2.json
stac-async/src/: api_client.rs  client.rs  download.rs  error.rs  io.rs  lib.rs
stac-cli/: CHANGELOG.md  Cargo.toml  README.md
stac-cli/src/: args.rs  command.rs  download.rs  error.rs  format.rs  io.rs  lib.rs  main.rs  output.rs  printer.rs  runner.rs  subcommand.rs
stac-cli/tests/: command.rs  help.rs  item.rs  validate.rs
stac-geoparquet/: Cargo.toml  README.md
stac-geoparquet/examples/: extended-item.parquet
stac-geoparquet/src/: lib.rs
stac-server/: CHANGELOG.md  Cargo.toml  README.md
stac-server/src/: api.rs  lib.rs  openapi.yaml  redoc.html  routes.rs
stac-validate/: CHANGELOG.md  Cargo.toml  README.md
stac-validate/src/: error.rs  lib.rs  validate.rs  validator.rs
stac-validate/tests/: migrate.rs  stac_v1_1_0_beta_1.rs
stac/examples/: bands-v1.0.0.json  bands-v1.1.0-beta.1.json  invalid-item.json  validate.rs
stac/src/: asset.rs  band.rs  bbox.rs  bounds.rs  catalog.rs  collection.rs  data_type.rs  datetime.rs  error.rs  extensions.rs  fields.rs  gdal.rs  geo.rs  geometry.rs  href.rs  io.rs  item.rs  item_collection.rs  lib.rs  link.rs  migrate.rs  statistics.rs  validate.rs  value.rs  version.rs
stac/tests/: migrate.rs  stac_v1_1_0.rs
validate/: CHANGELOG.md  Cargo.toml  README.md
validate/src/: blocking.rs  error.rs  lib.rs  validate.rs  validator.rs
validate/tests/: examples.rs  migrate.rs
(+331 files in other folders)
