[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/cli",
    "crates/core",
    "crates/derive",
    "crates/duckdb",
    "crates/extensions",
    "crates/pgstac",
    "crates/server",
]
default-members = [
    "crates/api",
    "crates/core",
    "crates/derive",
    "crates/extensions",
    "crates/server",
]

[workspace.package]
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
edition = "2021"
homepage = "https://stac-utils.github.io/stac-rs"
repository = "https://github.com/stac-utils/stac-rs"
license = "MIT OR Apache-2.0"
categories = ["science", "data-structures"]
rust-version = "1.82"

[workspace.dependencies]
anyhow = "1.0"
arrow = "54.2.1"
arrow-array = "54.2.1"
arrow-cast = "54.2.1"
arrow-json = "54.2.1"
arrow-schema = "54.2.1"
assert-json-diff = "2.0"
assert_cmd = "2.0"
async-stream = "0.3.6"
axum = "0.8.1"
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
bytes = "1.7"
chrono = "0.4.39"
clap = "4.5"
cql2 = "0.3.0"
duckdb = "=1.2.0"
fluent-uri = "0.3.2"
futures = "0.3.31"
geo = "0.29.3"
geo-types = "0.7.15"
geoarrow = "0.4.0-beta.4"
geojson = "0.24.1"
http = "1.1"
jsonschema = { version = "0.29.0", default-features = false }
libduckdb-sys = "=1.2.0"
log = "0.4.25"
mime = "0.3.17"
mockito = "1.5"
object_store = "0.11.0"
parquet = { version = "54.2.1", default-features = false }
pgstac = { version = "0.3.0", path = "crates/pgstac" }
pyo3 = "0.23.0"
pythonize = "0.23.0"
quote = "1.0"
reqwest = { version = "0.12.8", default-features = false, features = [
    "rustls-tls",
] }
rstest = "0.24.0"
rustls = { version = "0.23.22", default-features = false }
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7.1"
stac = { version = "0.12.0", path = "crates/core" }
stac-api = { version = "0.7.0", path = "crates/api" }
stac-derive = { version = "0.2.0", path = "crates/derive" }
stac-duckdb = { version = "0.1.1", path = "crates/duckdb" }
stac-extensions = { version = "0.1.0", path = "crates/extensions" }
stac-server = { version = "0.3.2", path = "crates/server" }
syn = "2.0"
tempfile = "3.16"
thiserror = "2.0"
tokio = "1.43"
tokio-postgres = "0.7.12"
tokio-postgres-rustls = "0.13.0"
tokio-stream = "0.1.16"
tokio-test = "0.4.4"
tower = "0.5.1"
tower-http = "0.6.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "tracing-log",
] }
url = "2.3"
webpki-roots = "0.26.8"

[patch.crates-io]
duckdb = { git = "https://github.com/duckdb/duckdb-rs", rev = "5eeb1f01c278790ce1e2d24045f0096e9e2528e4" }
libduckdb-sys = { git = "https://github.com/duckdb/duckdb-rs", rev = "5eeb1f01c278790ce1e2d24045f0096e9e2528e4" }
