[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/cli",
    "crates/core",
    "crates/derive",
    "crates/duckdb",
    "crates/extensions",
    "crates/pgstac",
    "crates/server",
]
default-members = [
    "crates/api",
    "crates/core",
    "crates/derive",
    "crates/extensions",
    "crates/server",
]

[workspace.package]
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
edition = "2024"
homepage = "https://stac-utils.github.io/rustac"
repository = "https://github.com/stac-utils/rustac"
license = "MIT OR Apache-2.0"
categories = ["science", "data-structures"]
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
arrow = "55.0.0"
arrow-array = "55.0.0"
arrow-cast = "55.0.0"
arrow-json = "55.0.0"
arrow-schema = "55.0.0"
assert-json-diff = "2.0"
assert_cmd = "2.0"
async-stream = "0.3.6"
axum = "0.8.1"
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
bytes = "1.7"
chrono = "0.4.39"
clap = "4.5"
cql2 = "0.3.0"
duckdb = "1.2.2"
fluent-uri = "0.3.2"
futures = "0.3.31"
geo = "0.30.0"
geo-types = "0.7.15"
geoarrow = "0.4.0-beta.4"
geoarrow-schema = { git = "https://github.com/geoarrow/geoarrow-rs/", rev = "80b15d4d5a69ab0828dbc3444f66df1e4c314bd0" }
geojson = "0.24.1"
http = "1.1"
jsonschema = { version = "0.30.0", default-features = false }
libduckdb-sys = "1.2.1"
log = "0.4.25"
mime = "0.3.17"
mockito = "1.5"
object_store = "0.12.0"
parquet = { version = "55.0.0", default-features = false }
pgstac = { version = "0.3.0", path = "crates/pgstac" }
quote = "1.0"
reqwest = { version = "0.12.8", default-features = false, features = [
    "rustls-tls",
] }
rstest = "0.25.0"
rustls = { version = "0.23.22", default-features = false }
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7.1"
stac = { version = "0.12.0", path = "crates/core" }
stac-api = { version = "0.7.0", path = "crates/api" }
stac-derive = { version = "0.2.0", path = "crates/derive" }
stac-duckdb = { version = "0.1.1", path = "crates/duckdb" }
stac-extensions = { version = "0.1.0", path = "crates/extensions" }
stac-server = { version = "0.3.2", path = "crates/server" }
syn = "2.0"
tempfile = "3.16"
thiserror = "2.0"
tokio = "1.44"
tokio-postgres = "0.7.12"
tokio-postgres-rustls = "0.13.0"
tokio-stream = "0.1.16"
tokio-test = "0.4.4"
tower = "0.5.1"
tower-http = "0.6.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "tracing-log",
] }
url = "2.3"
webpki-roots = "0.26.8"

[patch.crates-io]
geoarrow = { git = "https://github.com/geoarrow/geoarrow-rs/", rev = "80b15d4d5a69ab0828dbc3444f66df1e4c314bd0" }
duckdb = { git = "https://github.com/gadomski/duckdb-rs/", branch = "arrow-v55" }
