[project]
name = "stac-rs"
version = "0.0.0"
description = "This package should never be released, its just for uv."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
docs = [
    "contextily>=1.6.2",
    "geopandas>=1.0.1",
    "humanize>=4.11.0",
    "matplotlib>=3.9.2",
    "mike>=2.1.3",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material[imaging]>=9.5.40",
    "mkdocstrings[python]>=0.26.1",
    "stacrs",
]
stac-geoparquet = [
    "deepdiff>=8.0.1",
    "pyarrow>=17.0.0",
    "stac-geoparquet>=0.6.0",
]
stac-api-validator = ["setuptools>=75.1.0", "stac-api-validator>=0.6.3"]


[tool.uv.sources]
stacrs.workspace = true


[tool.uv.workspace]
members = ["python"]
