[package]
name = "stac-async"
version = "0.5.3"
edition = "2021"
description = "Asynchronous I/O for stac-rs"
documentation = "https://docs.rs/stac-async"
readme = "README.md"
repository = "https://github.com/stac-utils/stac-rs"
license = "MIT OR Apache-2.0"
keywords = ["geospatial", "stac", "metadata", "geo", "raster"]
categories = ["science", "data-structures"]

[dependencies]
async-stream = "0.3"
futures-core = "0.3"
futures-util = "0.3"
http = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = "1"
serde_json = "1"
stac = { version = "0.9", path = "../core" }
stac-api = { version = "0.5", path = "../api" }
thiserror = "1"
tokio = { version = "1.23", features = ["fs", "io-util"] }
url = "2"

[dev-dependencies]
mockito = "1"
tokio = { version = "1.23", features = ["rt", "macros"] }
tokio-test = "0.4"
