[package]
name = "stac-cli"
version = "0.4.0"
edition = "2021"
description = "Command line interface for stac-rs"
documentation = "https://docs.rs/stac-cli"
readme = "README.md"
repository = "https://github.com/stac-utils/stac-rs"
license = "MIT OR Apache-2.0"
keywords = ["geospatial", "stac", "metadata", "geo", "raster"]
categories = ["science", "data-structures"]
rust-version = "1.75"

[features]
default = ["gdal", "pgstac"]
duckdb = ["dep:stac-duckdb", "dep:duckdb"]
gdal = ["stac/gdal"]
pgstac = ["stac-server/pgstac", "dep:pgstac"]
python = ["dep:pyo3", "pgstac"]

[dependencies]
axum = "0.7"
clap = { version = "4", features = ["derive"] }
duckdb = { version = "1", optional = true } # We have this dependency only to allow us to bundle it
object_store = "0.11"
pgstac = { version = "0.2.1", path = "../pgstac", optional = true }
pyo3 = { version = "0.22", optional = true }
reqwest = "0.12"
serde = "1"
serde_json = "1"
stac = { version = "0.10.0", path = "../core", features = [
    "geoparquet-compression",
    "object-store-all",
    "reqwest",
] }
stac-api = { version = "0.6.0", path = "../api", features = ["client"] }
stac-duckdb = { version = "0.0.2", path = "../duckdb", optional = true }
stac-server = { version = "0.3.1", path = "../server", features = ["axum"] }
stac-validate = { version = "0.3.0", path = "../validate" }
thiserror = "1"
tokio = { version = "1.23", features = [
    "macros",
    "io-std",
    "rt-multi-thread",
    "fs",
] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"

[dev-dependencies]
assert_cmd = "2"
tokio-test = "0.4"

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "stacrs"
path = "src/main.rs"
doc = false
test = false
