[package]
name = "stac-cli"
version = "0.4.0"
edition = "2021"
description = "Command line interface for stac-rs"
documentation = "https://docs.rs/stac-cli"
readme = "README.md"
repository = "https://github.com/stac-utils/stac-rs"
license = "MIT OR Apache-2.0"
keywords = ["geospatial", "stac", "metadata", "geo", "raster"]
categories = ["science", "data-structures"]
rust-version = "1.75"

[features]
default = ["gdal", "pgstac"]
duckdb = ["dep:stac-duckdb", "dep:duckdb"]
gdal = ["stac/gdal"]
pgstac = ["stac-server/pgstac", "dep:pgstac"]
python = ["dep:pyo3", "pgstac"]

[dependencies]
axum = { workspace = true }
clap = { workspace = true, features = ["derive"] }
duckdb = { workspace = true, optional = true } # We have this dependency only to allow us to bundle it
object_store = { workspace = true }
pgstac = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
stac = { workspace = true, features = [
    "geoparquet-compression",
    "object-store-all",
    "reqwest",
    "validate",
] }
stac-api = { workspace = true, features = ["client"] }
stac-duckdb = { workspace = true, optional = true }
stac-server = { workspace = true, features = ["axum"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "io-std",
    "rt-multi-thread",
    "fs",
] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
tokio-test = { workspace = true }

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "stacrs"
path = "src/main.rs"
doc = false
test = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
