[package]
name = "stac-duckdb"
version = "0.0.1"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
edition = "2021"
description = "Experimental client for querying stac-geoparquet using DuckDB"
homepage = "https://github.com/stac-utils/stac-rs"
repository = "https://github.com/stac-utils/stac-rs"
license = "MIT OR Apache-2.0"
keywords = ["geospatial", "stac", "metadata", "geo", "raster"]
categories = ["science", "data-structures"]

[dependencies]
arrow = "52"
duckdb = "1.0"
geoarrow = { version = "0.3" }
parquet = "52"
stac = { version = "0.10.0", path = "../core", features = ["geoarrow"] }
stac-api = { version = "0.6.0", path = "../api" }
thiserror = "1"

[dev-dependencies]
duckdb-test = { path = "duckdb-test" }
geo = "0.28"
