[package]
name = "stac-duckdb"
version = "0.0.2"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
edition = "2021"
description = "Experimental client for querying stac-geoparquet using DuckDB"
homepage = "https://github.com/stac-utils/stac-rs"
repository = "https://github.com/stac-utils/stac-rs"
license = "MIT OR Apache-2.0"
keywords = ["geospatial", "stac", "metadata", "geo", "raster"]
categories = ["science", "data-structures"]

[dependencies]
arrow = { workspace = true }
duckdb = { workspace = true }
geoarrow = { workspace = true }
parquet = { workspace = true }
stac = { workspace = true, features = ["geoarrow"] }
stac-api = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
duckdb-test = { path = "duckdb-test" }
geo = { workspace = true }
