[package]
name = "pgstac"
version = "0.2.1"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
edition = "2021"
description = "Rust interface for pgstac"
homepage = "https://github.com/stac-utils/stac-rs"
repository = "https://github.com/stac-utils/stac-rs"
license = "MIT OR Apache-2.0"
keywords = ["geospatial", "stac", "metadata", "raster", "database"]
categories = ["database", "data-structures", "science"]

[features]
tls = ["dep:rustls", "dep:tokio-postgres-rustls", "dep:webpki-roots"]

[dependencies]
geojson = "0.24"
rustls = { version = "0.23", optional = true, features = [
    "ring",
    "std",
], default-features = false }
serde = "1"
serde_json = "1"
stac = { version = "0.10.0", path = "../core" }
stac-api = { version = "0.6.0", path = "../api" }
thiserror = "1"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
tokio-postgres-rustls = { version = "0.12", optional = true }
webpki-roots = { version = "0.26", optional = true }

[dev-dependencies]
pgstac-test = { path = "pgstac-test" }
tokio = { version = "1.23", features = ["rt-multi-thread", "macros"] }
tokio-test = "0.4"
