[package]
name = "python"
description = "Python bindings for stac-rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stac-utils/stac-rs"
homepage = "https://github.com/stac-utils/stac-rs"
version = "0.1.3"
edition = "2021"
publish = false

[lib]
name = "stacrs"
crate-type = ["cdylib"]

[dependencies]
duckdb = { workspace = true, features = [
    "bundled",
] } # we don't use it directly, but we need to ensure it's bundled
geojson = { workspace = true }
pyo3 = { workspace = true, features = ["extension-module"] }
pythonize = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
stac = { workspace = true, features = [
    "geoparquet-compression",
    "object-store-all",
    "reqwest",
    "validate-blocking",
] }
stac-api = { workspace = true, features = ["client"] }
stac-duckdb = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
