[package]
name = "python"
description = "Python bindings for stac-rs"
version = "0.2.1"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "stacrs"
crate-type = ["cdylib"]

[dependencies]
duckdb = { workspace = true, features = [
    "bundled",
] } # we don't use it directly, but we need to ensure it's bundled
geojson.workspace = true
pyo3 = { workspace = true, features = ["extension-module"] }
pythonize.workspace = true
serde.workspace = true
serde_json.workspace = true
stac = { workspace = true, features = [
    "geoparquet-compression",
    "object-store-all",
    "reqwest",
    "validate-blocking",
] }
stac-api = { workspace = true, features = ["client"] }
stac-duckdb.workspace = true
openssl.workspace = true # only so we can vendor it when cross-compiling
openssl-src.workspace = true # work around https://github.com/openssl/openssl/issues/25366
tokio = { workspace = true, features = ["rt"] }

[package.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get install --assume-yes libssl-dev:$CROSS_DEB_ARCH",
]
