[project]
name = "stacrs"
description = "A no-dependency Python package for STAC, using Rust under the hood."
readme = "README.md"
authors = [{ name = "Pete Gadomski", email = "pete.gadomski@gmail.com" }]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
keywords = ["stac", "geospatial"]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/stac-utils/stac-rs"
Documentation = "https://stac-utils.github.io/stac-rs"
Issues = "https://github.com/stac-utils/stac-rs/issues"

[tool.maturin]
features = ["pyo3/extension-module"]

[[tool.mypy.overrides]]
module = "pyarrow.*"
ignore_missing_imports = true

[tool.uv]
dev-dependencies = [
    "maturin>=1.7.4",
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
    "stac-geoparquet>=0.6.0",
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"
