[package]
name = "stac-server"
version = "0.1.1"
edition = "2021"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
description = "SpatioTemporal Asset Catalog (STAC) API server"
homepage = "https://github.com/stac-utils/stac-rs"
repository = "https://github.com/stac-utils/stac-rs"
license = "MIT OR Apache-2.0"
keywords = ["geospatial", "stac", "metadata", "geo", "raster"]
categories = ["science", "data-structures"]
rust-version = "1.75"

[features]
axum = ["dep:axum", "dep:bytes", "dep:mime", "dep:tower-http"]
pgstac = ["dep:pgstac", "dep:bb8", "dep:bb8-postgres", "dep:tokio-postgres"]

[dependencies]
axum = { version = "0.7", optional = true }
bb8 = { version = "0.8", optional = true }
bb8-postgres = { version = "0.8", optional = true }
bytes = { version = "1", optional = true }
http = "1"
mime = { version = "0.3", optional = true }
pgstac = { version = "0.1", path = "../pgstac", optional = true }
serde = "1"
serde_json = "1"
serde_urlencoded = "0.7"
stac = { version = "0.8", path = "../core" }
stac-api = { version = "0.4", path = "../api", features = ["geo"] }
stac-async = { version = "0.5", path = "../async" }
thiserror = "1"
tokio-postgres = { version = "0.7", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }
url = "2"

[dev-dependencies]
serde_json = "1"
stac-validate = { version = "0.2", path = "../validate" }
tokio = { version = "1.37", features = ["macros"] }
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
