[package]
name = "stac-api"
version = "0.3.2"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
edition = "2021"
description = "Rust library for the SpatioTemporal Asset Catalog (STAC) API specification"
homepage = "https://github.com/stac-utils/stac-rs"
repository = "https://github.com/stac-utils/stac-rs"
license = "MIT OR Apache-2.0"
keywords = ["geospatial", "stac", "metadata", "geo", "raster"]
categories = ["science", "data-structures", "web-programming"]

[features]
schemars = ["dep:schemars", "stac/schemars"]

[dependencies]
schemars = { version = "0.8", optional = true }
serde = "1"
serde_json = "1"
serde_urlencoded = "0.7"
stac = { version = "0.5", path = "../stac" }
thiserror = "1"
url = "2.3"
