[package]
name = "stac-api"
version = "0.4.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
edition = "2021"
description = "Rust library for the SpatioTemporal Asset Catalog (STAC) API specification"
homepage = "https://github.com/stac-utils/stac-rs"
repository = "https://github.com/stac-utils/stac-rs"
license = "MIT OR Apache-2.0"
keywords = ["geospatial", "stac", "metadata", "geo", "raster"]
categories = ["science", "data-structures", "web-programming"]

[features]
geo = ["dep:geo", "stac/geo"]

[dependencies]
chrono = "0.4"
geo = { version = "0.28", optional = true }
geojson = "0.24"
serde = "1"
serde_json = "1"
serde_urlencoded = "0.7"
stac = { version = "0.7", path = "../stac" }
thiserror = "1"
url = "2.3"

[dev-dependencies]
geojson = "0.24"
