[package]
name = "stac-arrow"
version = "0.1.0"
edition = "2021"

[features]
parquet = ["geoarrow/parquet"]
parquet-compression = ["geoarrow/parquet_compression"]

[dependencies]
arrow = "52"
arrow-cast = "52"
geoarrow = { git = "https://github.com/geoarrow/geoarrow-rs", rev = "6fd07d5555f03b113a5cd36c7bf71c1a7cec8579" }
geojson = "0.24"
serde_json = "1"
stac = { version = "0.7", path = "../stac" }
thiserror = "1"
